--- a/style.css
+++ b/style.css
@@ -10,10 +10,11 @@ body {
 }
 
 .container {
-  height: 500px;
+  height: 390px;
   width: 300px;
   background-color: lightgray;
   border-radius: 20px;
+  border: 1px solid darkgray;
 }
 .top-container {
   display: flex;
@@ -40,4 +41,49 @@ body {
   align-self: flex-end;
   padding: px;
   border: gray 1px solid;
+}
+.display-container {
+  display: flex;
+  width: 300px;
+  justify-content: center;
+}
+
+.display {
+  display: flex;
+  flex: none;
+  background-color: rgb(24, 119, 0);
+  align-items: flex-end;
+  border: 2px solid rgb(121, 121, 121);
+  width: 230px;
+  align-items: center;
+  justify-content: flex-end;
+  margin-top: 10px;
+}
+
+.text {
+  font-size: 32px;
+  padding: 3px;
+  margin: 0px;
+  font-family: "Orbitron", sans-serif;
+}
+.btn-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 300px;
+  height: 270px;
+}
+.btn-row {
+  display: flex;
+  width: 300px;
+  justify-content: space-around;
+  padding: 5px;
+}
+.btn {
+  width: 60px;
+  height: 30px;
+  background-color: rgb(110, 109, 109);
+  font-size: 20px;
+  color: white;
 }
