added maximum result displayed

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
   font-size: 12px;
 }
 .charger-container {
-  background-color: brown;
+  background-color: rgb(126, 44, 44);
   width: 130px;
   height: 30px;
   border-radius: 5px;
