--- a/old-style-calculator.css
+++ b/old-style-calculator.css
@@ -8,6 +8,7 @@ body {
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  background-color: rgba(0, 0, 0, 0.905);
 }
 #old-style-calculator-btn,
 #new-style-calculator-btn {
